--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -32,6 +32,20 @@ RUN apt-get update && apt-get install -y \
 #RUN apt-get install -y zip bison build-essential cmake flex git libedit-dev \
 #  libllvm14 llvm-14-dev libclang-14-dev python3 zlib1g-dev libelf-dev libfl-dev python3-setuptools \
 #  liblzma-dev libdebuginfod-dev arping netperf iperf \
+# Clone the repository and build BCC
+RUN git clone https://github.com/iovisor/bcc.git \
+    && cd bcc \
+    && mkdir build \
+    && cd build \
+    && cmake .. \
+    && make \
+    && sudo make install
+
+# Build Python3 bindings
+RUN cd /bcc/build/src/python \
+    && cmake -DPYTHON_CMD=python3 .. \
+    && make \
+    && sudo make install
 
 # Install Flask and other required dependencies
 RUN pip3 install Flask gunicorn
