--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -16,34 +16,25 @@ RUN apt-get update && apt-get install -y \
 
 # Clone the repository and build BCC
 RUN git clone https://github.com/iovisor/bcc.git \
-    && cd bcc \
-    && mkdir build \
-    && cd build \
+    && mkdir bcc/build \
+    && cd bcc/build \
     && cmake .. \
     && make \
-    && make install
-
-# Build Python3 bindings
-RUN cd /bcc/build/src/python \
+    && make install \
     && cmake -DPYTHON_CMD=python3 .. \
     && make \
-    && sudo make install
+    && make install
 
 # Install Flask and other required dependencies
 RUN pip3 install Flask gunicorn cryptography grpcio grpcio-tools
 
 # Copy files into the container
-COPY app.py grpc_server.py .
+COPY app.py grpc_server.py ./
 COPY utils/index.html /etc/nginx/html/index.html
-COPY utils/att_doc_retriever_sample .
-COPY utils/attestation_retriever .
-COPY utils/cert.der .
-COPY utils/myservice.proto .
+
+COPY utils/att_doc_retriever_sample utils/attestation_retriever utils/cert.der utils/myservice.proto utils/public_enclaver_tls_key.pem  ./
 COPY utils/enclaves.key /etc/ssl/private/enclaves.key
 COPY utils/enclaves.pem /etc/ssl/certs/enclaves.pem
-
-COPY utils/public_enclaver_tls_key.pem .
-
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 
 # Expose ports
@@ -63,7 +54,7 @@ RUN curl -JLO "https://dl.filippo.io/mkcert/latest?for=linux/amd64" && \
 
 # Install and configure mkcert
 RUN mkcert -install && \
-    mkcert -cert-file enclaves_tls.pem -key-file /app/enclaves_tls.key ec2-3-79-42-225.eu-central-1.compute.amazonaws.com
+    mkcert -cert-file enclaves_tls.pem -key-file enclaves_tls.key ec2-3-79-42-225.eu-central-1.compute.amazonaws.com
 
 # Set execution permission for the scripts
 RUN chmod +x run.sh
