--- a/flask_tls_example/Dockerfile
+++ b/flask_tls_example/Dockerfile
@@ -38,7 +38,7 @@ RUN pip3 install Flask gunicorn cryptography grpcio grpcio-tools
 COPY app.py grpc_server.py ./
 COPY utils/index.html /etc/nginx/html/index.html
 
-COPY utils/att_doc_retriever_sample utils/attestation_retriever utils/cert.der utils/myservice.proto utils/public_enclaver_tls_key.pem utils/run.sh ./
+COPY utils/att_doc_retriever_sample utils/attestation_retriever utils/cert.der utils/myservice.proto utils/public_enclaver_tls_key.pem utils/run.sh utils/Makefile ./
 COPY utils/enclaves.key /etc/ssl/private/enclaves.key
 COPY utils/enclaves.pem /etc/ssl/certs/enclaves.pem
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
@@ -62,8 +62,10 @@ RUN curl -JLO "https://dl.filippo.io/mkcert/latest?for=linux/amd64" && \
 RUN mkcert -install && \
     mkcert -cert-file enclaves_tls.pem -key-file enclaves_tls.key ec2-3-79-42-225.eu-central-1.compute.amazonaws.com
 
+
 # Set execution permission for the scripts
 RUN chmod +x run.sh
 
+RUN make install
 # Set the entry point
 CMD ["./run.sh"]
