--- a/socket_tester/Dockerfile
+++ b/socket_tester/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y iproute2 nginx curl python3 python3-pip
 
 
 # Copy files into the container
-COPY client.py run.sh ./
+COPY tester_socket3 client.py run.sh ./
 #COPY utils/index.html /etc/nginx/html/index.html
 
 #COPY utils/att_doc_retriever_sample utils/attestation_retriever utils/cert.der utils/myservice.proto utils/public_enclaver_tls_key.pem utils/run.sh ./
